Clean.UI minor updates & fixes release v1.0.1
- The initially-opened accordion should have the minus icon
- Add screen-reader-only (.sr-only) class,
- .bar-item width and display should not change on mobile (<=550px), also true for ".prev-next navigation"
- no-bullets list should have left-paddings (useful when it comes to embedded lists / hierarchy; use ".padding-left-0" when you need it)
- Scrollbar thickness changes now at <=600px breakpoint
- table of content: limit max-width (breaks longer content)
- Mark deprecated UI components (lightbox, tabbed images, and slideshow)
- Add the missing "breadcrumb-left" class on the demo page
- Change button padding, line height to normal

--- a/ui/clean/_dev/sass/clean/elements/scrollbar.sass
+++ b/ui/clean/_dev/sass/clean/elements/scrollbar.sass
@@ -1,7 +1,7 @@
 /* width */
 ::-webkit-scrollbar
     width: 12px
-    @media screen and (max-width: $s-1024)
+    @media screen and (max-width: $s-600)
         width: 6px
 
 /* Track */
