--- a/ui/clean/_dev/sass/clean/meta/mixins.sass
+++ b/ui/clean/_dev/sass/clean/meta/mixins.sass
@@ -1,9 +1,10 @@
 @mixin button
     display: inline-block
     margin: 1em 0.1em 0 0
-    padding: 0.4em 1em 0.5em
+    padding: 0.5em 1em
     border-radius: .25rem
     font-size: 14px
+    line-height: normal
     font-weight: 600
     font-family: $sans
     text-align: center
