--- a/ui/clean/_dev/sass/clean/structure/toc.sass
+++ b/ui/clean/_dev/sass/clean/structure/toc.sass
@@ -6,6 +6,7 @@
     padding: 1em
     height: fit-content
     background-color: #fff
+    max-width: 320px
 
     > h2
         margin-top: 0
